KAPPA: Typography and trailing space.

--- a/applications/kappa/sun95.tex
+++ b/applications/kappa/sun95.tex
@@ -28904,7 +28904,7 @@ scaling limits are used for both images.
 
       By default, each data value contributes a value of one to the
       corresponding histogram bin, but alternative weights may be
-      supplied via parameter WEIGHTS.
+      supplied via Parameter WEIGHTS.
    }
    \sstusage{
       histogram in numbin range [comp] [logfile]
@@ -28917,8 +28917,8 @@ scaling limits are used for both images.
          plot.  The width of the margins left for the annotation may be
          controlled using Parameter MARGIN.  The appearance of the axes
          (colours, founts, \emph{etc.}) can be controlled using the Parameter
-         STYLE.  The dynamic default is TRUE if CLEAR is TRUE, and FALSE
-         otherwise. {\tt []}
+         STYLE.  The dynamic default is {\tt TRUE} if CLEAR is {\tt TRUE}, and
+         {\tt FALSE} otherwise. {\tt []}
       }
       \sstsubsection{
          CLEAR = \_LOGICAL (Read)
