KAPPA: Do not set the BAD_PIXEL flag in COPYBAD.
The statistic returned from kps1_cpb.gen is the number of bad values
copied.  It has no knowledge of any existing bad values and these may
be different for the DATA and VARAINCE components.  As previously
written it was possible to have the BAD_PIXEL flag set to FALSE while
there were bad values present.

Also change the description of the kps1_cpb.gen arguments, and
COPYBAD's output parameters and messages to match the actual meanings.

--- a/applications/kappa/sun95.tex
+++ b/applications/kappa/sun95.tex
@@ -20781,12 +20781,12 @@ KAPPA: \htmlref{BLOCK}{BLOCK},
       \sstsubsection{
          NBAD = \_INTEGER (Write)
       }{
-         The number of bad pixels in the output NDF.
+         The number of bad pixels copied to the output NDF.
       }
       \sstsubsection{
          NGOOD = \_INTEGER (Write)
       }{
-         The number of good pixels in the output NDF.
+         The number of pixels not made bad in the output NDF.
       }
    }
    \sstexamples{
@@ -59257,6 +59257,8 @@ The following applications have been modified:
       \begin{itemize}
         \item  Now writes the number of good and bad pixels in the output
         NDF to output parameters NGOOD and NBAD.
+        \item No longer sets the BAD\_PIXEL flag for the DATA and
+        VARIANCE components.
       \end{itemize}
    \item [\htmlref{DISPLAY}{DISPLAY}]\mbox{}
       \begin{itemize}
