ast: Document move to LGPL

--- a/libraries/ast/sun_master.tex
+++ b/libraries/ast/sun_master.tex
@@ -22946,6 +22946,8 @@ current version):
 
 \begin{enumerate}
 
+\item AST is now distributed under the Lesser GPL licence.
+
 \item The PolyMap class now uses files copied from the C/C++ Minpack
 package (see http://devernay.free.fr/hacks/cminpack/index.html) to perform
 least squares fitting of N-dimensional polynomials.
